--- a/styles/Box.module.css
+++ b/styles/Box.module.css
@@ -25,12 +25,13 @@
   z-index: 1;
   width: 100%;
   height: 220%;
-  top: -50%;
+  top: -75%;
   left: -100%;
-  background: rgba(135, 255, 230, 0.75);
+  background-image: url("/wall.jpg");
+  opacity: 0.8;
   transform: rotate(25deg);
   transform-origin: center top 0;
-  transition: 0.5s;
+  transition: 0.7s;
 }
 
 .card:hover:before {
@@ -47,7 +48,7 @@
   padding: 0 20px;
   position: absolute;
   top: -100%;
-  color: #121212;
+  color: #fff;
   left: 0;
   z-index: 2;
   transition: 1.1s;
