--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,20 +6,20 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   background: fixed;
 
-  background-color: #ffe687;
+  /* background-color: #ffe687;
   background-image: linear-gradient(
     68.2deg,
     rgba(255, 202, 88, 1) 0%,
     rgba(139, 73, 255, 1) 100.2%
-  );
+  ); */
 }
 
 a {
-  color: inherit;
+  color: #fff;
   text-decoration: none;
 }
 
 * {
   box-sizing: border-box;
-  color: #121212;
+  /* color: #fff; */
 }
