--- a/styles/Box.module.css
+++ b/styles/Box.module.css
@@ -24,18 +24,19 @@
   content: "";
   z-index: 1;
   width: 100%;
-  height: 220%;
-  top: -75%;
+  height: 180%;
+  top: -50%;
   left: -100%;
-  background-image: url("/wall.jpg");
-  opacity: 0.8;
+  background-image: url("/studiowood_card.jpg");
+  background-size: auto;
+  opacity: 0.92;
   transform: rotate(25deg);
   transform-origin: center top 0;
   transition: 0.7s;
 }
 
 .card:hover:before {
-  left: 40%;
+  left: 30%;
 }
 
 .card img {
@@ -48,7 +49,7 @@
   padding: 0 20px;
   position: absolute;
   top: -100%;
-  color: #fff;
+  color: black;
   left: 0;
   z-index: 2;
   transition: 1.1s;
