--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,14 +4,23 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  background: fixed;
+  background-attachment: fixed;
+  background-image: "/../public/studiowall.jpg";
+  background-repeat: no-repeat;
+}
 
-  /* background-color: #ffe687;
-  background-image: linear-gradient(
-    68.2deg,
-    rgba(255, 202, 88, 1) 0%,
-    rgba(139, 73, 255, 1) 100.2%
-  ); */
+.content_bg {
+  margin: 50px 0;
+  background-image: url();
+  height: 500px;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.box {
+  position: fixed;
+  z-index: 0;
+  top: 0;
 }
 
 a {
